force-app/main/default/objects/Installation__c/Installation__c.object-meta.xml
<CustomObject>
    <label>Installation</label>
    <nameField>
        <displayFormat>INS-{0000000}</displayFormat>
        <label>Installation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>