force-app/main/default/objects/Installation__c/fields/Auto_Installation__c.field-meta.xml
<CustomField>
    <fullName>Auto_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Installation</label>
    <type>Checkbox</type>
</CustomField>