force-app/main/default/objects/Installation__c/fields/Auto_Installation_Termination_Error__c.field-meta.xml
<CustomField>
    <fullName>Auto_Installation_Termination_Error__c</fullName>
    <label>Auto Installation/Termination Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>