force-app/main/default/objects/Installation__c/fields/Auto_Termination__c.field-meta.xml
<CustomField>
    <fullName>Auto_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Termination</label>
    <type>Checkbox</type>
</CustomField>