force-app/main/default/objects/Installation__c/fields/Change_Package_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_Package_Status__c</fullName>
    <label>Change Package Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>