force-app/main/default/objects/Installation__c/fields/Contract_Customer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Customer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria. Please choose B2B Account</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>B2B Account</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Archived B2B Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installations (Contract Customer)</relationshipLabel>
    <relationshipName>Installations2</relationshipName>
    <type>Lookup</type>
</CustomField>