force-app/main/default/objects/Installation__c/fields/Contract_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Customer_ID__c</fullName>
    <formula>Contract_Customer__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Customer ID</label>
    <type>Text</type>
</CustomField>