force-app/main/default/objects/Installation__c/fields/Contract_Customer_IMO__c.field-meta.xml
<CustomField>
    <fullName>Contract_Customer_IMO__c</fullName>
    <formula>Contract_Customer__r.IMO_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Customer IMO</label>
    <type>Text</type>
</CustomField>