force-app/main/default/objects/Installation__c/fields/Crew_Vessel_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Crew_Vessel_Order_Status__c</fullName>
    <label>Crew Vessel Order Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>