force-app/main/default/objects/Installation__c/fields/Customer_Installation_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Installation_Name__c</fullName>
    <label>Customer Installation Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>