force-app/main/default/objects/Installation__c/fields/DeleteInstallationLinesAndSOs__c.field-meta.xml
<CustomField>
    <fullName>DeleteInstallationLinesAndSOs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeleteInstallationLinesAndSOs</label>
    <type>Checkbox</type>
</CustomField>