force-app/main/default/objects/Installation__c/fields/Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>