force-app/main/default/objects/Installation__c/fields/Delivery_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_ID__c</fullName>
    <formula>Delivery_Contact__r.Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Contact ID</label>
    <type>Text</type>
</CustomField>