force-app/main/default/objects/Installation__c/fields/Delivery_Preference__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Preference__c</fullName>
    <label>Delivery Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USB</fullName>
            </value>
            <value>
                <fullName>Download Link generated by OTG</fullName>
            </value>
            <value>
                <fullName>Self Service Download</fullName>
            </value>
            <value>
                <fullName>Marlink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>