force-app/main/default/objects/Installation__c/fields/First_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Invoice Sent</label>
    <type>Checkbox</type>
</CustomField>