force-app/main/default/objects/Installation__c/fields/First_Invoice_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice_Sent_Date__c</fullName>
    <label>First Invoice Sent Date</label>
    <type>Date</type>
</CustomField>