force-app/main/default/objects/Installation__c/fields/Fleet_Vessel_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Vessel_Order_Status__c</fullName>
    <label>Fleet Vessel Order Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>