force-app/main/default/objects/Installation__c/fields/Forecast_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Delivery_Date__c</fullName>
    <description>Only populated when it has been agreed with the customer that delivery of this installation will be delayed until a future date.</description>
    <label>Forecast Delivery Date</label>
    <type>Date</type>
</CustomField>