force-app/main/default/objects/Installation__c/fields/IHS_Vessel_Type_Level_2__c.field-meta.xml
<CustomField>
    <fullName>IHS_Vessel_Type_Level_2__c</fullName>
    <formula>Vessel_Name__r.Vessel_Type_Level_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IHS Vessel Type Level 2</label>
    <type>Text</type>
</CustomField>