force-app/main/default/objects/Installation__c/fields/IHS_Vessel_URL__c.field-meta.xml
<CustomField>
    <fullName>IHS_Vessel_URL__c</fullName>
    <formula>IF(ISBLANK( Vessel_IMO__c),&quot;&quot;,&quot;https://maritime.ihs.com/Ships/Details/&quot; + Vessel_IMO__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IHS Vessel URL</label>
    <type>Text</type>
</CustomField>