force-app/main/default/objects/Installation__c/fields/Installation_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Activated_Date__c</fullName>
    <label>Installation Activated Date</label>
    <type>Date</type>
</CustomField>