force-app/main/default/objects/Installation__c/fields/Installation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Installation_Comments__c</fullName>
    <label>Installation Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>