force-app/main/default/objects/Installation__c/fields/Installation_End_date__c.field-meta.xml
<CustomField>
    <fullName>Installation_End_date__c</fullName>
    <label>Installation End date</label>
    <type>Date</type>
</CustomField>