force-app/main/default/objects/Installation__c/fields/Installation_Name__c.field-meta.xml
<CustomField>
    <fullName>Installation_Name__c</fullName>
    <label>Installation Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>