force-app/main/default/objects/Installation__c/fields/Installation_NDA__c.field-meta.xml
<CustomField>
    <fullName>Installation_NDA__c</fullName>
    <formula>Vessel_Name__r.Installation_under_NDA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation NDA</label>
    <type>Checkbox</type>
</CustomField>