force-app/main/default/objects/Installation__c/fields/Installation_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Order_Status__c</fullName>
    <label>Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending Implementation</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Future Terminated</fullName>
            </value>
            <value>
                <fullName>Termination Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>