force-app/main/default/objects/Installation__c/fields/Installation_Profile__c.field-meta.xml
<CustomField>
    <fullName>Installation_Profile__c</fullName>
    <label>Installation Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>