force-app/main/default/objects/Installation__c/fields/Installation_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Installation_Start_date__c</fullName>
    <label>Installation Start date</label>
    <type>Date</type>
</CustomField>