force-app/main/default/objects/Installation__c/fields/Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>Installation_Type__c</fullName>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vessel</fullName>
            </value>
            <value>
                <fullName>Organisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>