force-app/main/default/objects/Installation__c/fields/InstallationPrice__c.field-meta.xml
<CustomField>
    <fullName>InstallationPrice__c</fullName>
    <formula>Package__r.InstallationCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>