force-app/main/default/objects/Installation__c/fields/Internal_Installation_Name__c.field-meta.xml
<CustomField>
    <fullName>Internal_Installation_Name__c</fullName>
    <formula>Contract_Customer__r.Name &amp; &quot; - &quot; &amp; Installation_Name__c &amp; &quot; - &quot; &amp; Vessel_IMO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Installation Name</label>
    <type>Text</type>
</CustomField>