force-app/main/default/objects/Installation__c/fields/Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 OR 2) AND 3)</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria.Please select Invoice Account</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Invoice Account</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Replica Invoice Account</value>
        </filterItems>
        <filterItems>
            <field>$Source.Contract_Customer__c</field>
            <operation>equals</operation>
            <valueField>Account.B2B_Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installations (Invoice account)</relationshipLabel>
    <relationshipName>Installations1</relationshipName>
    <type>Lookup</type>
</CustomField>