force-app/main/default/objects/Installation__c/fields/Invoice_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address__c</fullName>
    <formula>IF(LEN(Invoice_Account__r.Address1__c) &gt;0, Invoice_Account__r.Address1__c &amp; &quot;, &quot; , &quot;&quot; )&amp;

IF(LEN(Invoice_Account__r.Address2__c) &gt;0, Invoice_Account__r.Address2__c&amp; &quot; &quot; , &quot;&quot;  )&amp;

IF(LEN(Invoice_Account__r.Address3__c)&gt;0, Invoice_Account__r.Address3__c,&quot;&quot;) &amp; BR() &amp;

IF(LEN(Invoice_Account__r.Town_City__c)&gt;0, Invoice_Account__r.Town_City__c,&quot;&quot;) &amp; BR()&amp;

IF(LEN(Invoice_Account__r.County_State__c)&gt;0, Invoice_Account__r.County_State__c,&quot;&quot;) &amp; BR()&amp;

IF(LEN(Invoice_Account__r.Postcode_Zipcode__c)&gt;0, Invoice_Account__r.Postcode_Zipcode__c,&quot;&quot;)&amp; BR()&amp;

IF(LEN(Invoice_Account__r.Country__r.Name)&gt;0, Invoice_Account__r.Country__r.Name ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Address</label>
    <type>Text</type>
</CustomField>