force-app/main/default/objects/Installation__c/fields/Invoiced_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_to_Date__c</fullName>
    <label>Invoiced to Date</label>
    <type>Date</type>
</CustomField>