force-app/main/default/objects/Installation__c/fields/L_A_Subscription_Annual_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>L_A_Subscription_Annual_Order_Value__c</fullName>
    <label>L&amp;A Subscription Annual Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>