force-app/main/default/objects/Installation__c/fields/L_A_User_Count__c.field-meta.xml
<CustomField>
    <fullName>L_A_User_Count__c</fullName>
    <defaultValue>50</defaultValue>
    <inlineHelpText>L&amp;A User Count per installation</inlineHelpText>
    <label>L&amp;A User Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>