force-app/main/default/objects/Installation__c/fields/L_A_Vessel_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>L_A_Vessel_Order_Status__c</fullName>
    <label>L&amp;A Vessel Order Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>