force-app/main/default/objects/Installation__c/fields/Last_Invoice_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Sent_Date__c</fullName>
    <label>Last Invoice Sent Date</label>
    <type>Date</type>
</CustomField>