force-app/main/default/objects/Installation__c/fields/Legacy_package_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_package_Name__c</fullName>
    <label>Legacy package Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>