force-app/main/default/objects/Installation__c/fields/OLP_Database_Name_s__c.field-meta.xml
<CustomField>
    <fullName>OLP_Database_Name_s__c</fullName>
    <label>OLP Database Name/s</label>
    <length>100</length>
    <type>Text</type>
</CustomField>