force-app/main/default/objects/Installation__c/fields/OLP_Installation_ID__c.field-meta.xml
<CustomField>
    <fullName>OLP_Installation_ID__c</fullName>
    <label>OLP Installation ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>