force-app/main/default/objects/Installation__c/fields/OLP_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>OLP_Serial_Number__c</fullName>
    <label>OLP Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>