force-app/main/default/objects/Installation__c/fields/Pending_Implementation_Flag__c.field-meta.xml
<CustomField>
    <fullName>Pending_Implementation_Flag__c</fullName>
    <formula>OR(
       ISPICKVAL(Order__r.Status , &apos;Pending Implementation&apos;) ,
       ISPICKVAL( Installation_Order_Status__c , &apos;Pending Implementation&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Implementation Flag</label>
    <type>Checkbox</type>
</CustomField>