force-app/main/default/objects/Installation__c/fields/Previous_Installation_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Installation_Name__c</fullName>
    <label>Previous Installation Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>