force-app/main/default/objects/Installation__c/fields/Quote_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Group</label>
    <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>