force-app/main/default/objects/Installation__c/fields/Sportal_Installation_ID__c.field-meta.xml
<CustomField>
    <fullName>Sportal_Installation_ID__c</fullName>
    <label>Sportal Installation ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>