force-app/main/default/objects/Installation__c/fields/Subscription_Annual_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Annual_Order_Value__c</fullName>
    <label>Subscription Annual Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>