force-app/main/default/objects/Installation__c/fields/Termination_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_End_Date__c</fullName>
    <label>Termination End Date</label>
    <type>Date</type>
</CustomField>