force-app/main/default/objects/Installation__c/fields/Termination_Order__c.field-meta.xml
<CustomField>
    <fullName>Termination_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Termination Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>TerminationOrders</relationshipName>
    <type>Lookup</type>
</CustomField>