force-app/main/default/objects/Installation__c/fields/Termination_Process_Error__c.field-meta.xml
<CustomField>
    <fullName>Termination_Process_Error__c</fullName>
    <label>Termination Process Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>