force-app/main/default/objects/Installation__c/fields/Termination_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Termination_Process_Status__c</fullName>
    <label>Termination Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>SO Updated</fullName>
            </value>
            <value>
                <fullName>CPQ Submitted</fullName>
            </value>
            <value>
                <fullName>Waiting For Order Activation</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Retry Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>