force-app/main/default/objects/Installation__c/fields/Termination_Quote__c.field-meta.xml
<CustomField>
    <fullName>Termination_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Termination Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>TerminationQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>