force-app/main/default/objects/Installation__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <inlineHelpText>Max 10000 characters</inlineHelpText>
    <label>Termination Reason</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>