force-app/main/default/objects/Installation__c/fields/UNA_installation_ID__c.field-meta.xml
<CustomField>
    <fullName>UNA_installation_ID__c</fullName>
    <label>UNA installation ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>