force-app/main/default/objects/Installation__c/fields/UNA_License_Registration_Name__c.field-meta.xml
<CustomField>
    <fullName>UNA_License_Registration_Name__c</fullName>
    <label>UNA License Registration Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>