force-app/main/default/objects/Installation__c/fields/UNA_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>UNA_Serial_Number__c</fullName>
    <label>UNA Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>