force-app/main/default/objects/Installation__c/fields/UNA_TM_company_ID__c.field-meta.xml
<CustomField>
    <fullName>UNA_TM_company_ID__c</fullName>
    <label>UNA TM company ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>