force-app/main/default/objects/Installation__c/fields/Vessel_Email__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Email__c</fullName>
    <label>Vessel Email</label>
    <type>Email</type>
</CustomField>