force-app/main/default/objects/Installation__c/fields/Vessel_Name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vessel Name</label>
    <referenceTo>Vessel__c</referenceTo>
    <relationshipLabel>Installations</relationshipLabel>
    <relationshipName>Installations</relationshipName>
    <type>Lookup</type>
</CustomField>