force-app/main/default/objects/Installation__c/fields/Vessel_Profile__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Profile__c</fullName>
    <formula>Vessel_Name__r.Vessel_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel Profile</label>
    <type>Text</type>
</CustomField>