force-app/main/default/objects/Installation__c/fields/Vessel_Status__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Status__c</fullName>
    <formula>TEXT(Vessel_Name__r.Vessel_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel Status</label>
    <type>Text</type>
</CustomField>