force-app/main/default/objects/Installation__c/fields/Vessel_Type__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Type__c</fullName>
    <formula>Text(Vessel_Name__r.OTG_Vessel_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel Type</label>
    <type>Text</type>
</CustomField>