force-app/main/default/objects/Installation__c/fields/X18_Digit_Contract_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Contract_Account_ID__c</fullName>
    <formula>Contract_Customer__r.X18_Digit_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Contract Account ID</label>
    <type>Text</type>
</CustomField>