force-app/main/default/objects/Installation__c/fields/X18_Digit_Vessel_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_Vessel_ID__c</fullName>
    <formula>Vessel_Name__r.X18_Digit_Vessel_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit Vessel ID</label>
    <type>Text</type>
</CustomField>