force-app/main/default/objects/Installation__c/validationRules/Forecast_Delivery_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Forecast_Delivery_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Forecast_Delivery_Date__c &lt; TODAY() ,
    $User.FirstName != &apos;Dataloader&apos;,  
    CONTAINS($UserRole.Name, &apos;Professional Services&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Forecast_Delivery_Date__c</errorDisplayField>
    <errorMessage>Forecast Delivery Date can&apos;t be in the past.</errorMessage>
</ValidationRule>