force-app/main/default/objects/Installation__c/validationRules/Organisation_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Organisation_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$Setup.VRConfiguration__c.Vessel_Validation_Rules__c = false,
$User.FirstName != &apos;Dataloader&apos;, 
ISPICKVAL(Installation_Type__c,&quot;Organisation&quot;), 
ISBLANK(Organisation_Name__c))</errorConditionFormula>
    <errorDisplayField>Organisation_Name__c</errorDisplayField>
    <errorMessage>Vessel Name is mandatory.</errorMessage>
</ValidationRule>