force-app/main/default/objects/Installation__c/validationRules/Teminate_Installation.validationRule-meta.xml
<ValidationRule>
    <fullName>Teminate_Installation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
     ISPICKVAL(Installation_Order_Status__c , &quot;Terminated&quot;),
     OR(
         ISBLANK( Termination_End_Date__c ) ,
         ISBLANK( Termination_Reason__c ) 
       )
     )</errorConditionFormula>
    <errorDisplayField>Installation_Order_Status__c</errorDisplayField>
    <errorMessage>Termination End Date and Termination Reason must be populated when Status is &apos;Terminated&apos;</errorMessage>
</ValidationRule>