force-app/main/default/objects/Installation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sportal_Installation_ID__c</columns>
    <columns>Customer_Installation_Name__c</columns>
    <columns>Installation_Start_date__c</columns>
    <columns>Installation_End_date__c</columns>
    <columns>Vessel_Name__c</columns>
    <columns>Contract_Customer__c</columns>
    <columns>Installation_Profile__c</columns>
    <columns>Installation_Type__c</columns>
    <columns>Invoice_Account__c</columns>
    <columns>OLP_Database_Name_s__c</columns>
    <columns>OLP_Serial_Number__c</columns>
    <columns>Subscription_Annual_Order_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>